[gd_scene load_steps=4 format=2]

[ext_resource path="res://world_objects/bridge/bridge_wing_with_pivot.tscn" type="PackedScene" id=1]
[ext_resource path="res://world_objects/bridge/Bridge.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 6, 1, 5 )

[node name="Bridge" type="Spatial"]
script = ExtResource( 2 )

[node name="bridge_wingL" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, -1.06173e-13, -3.25841e-07, 0, 1, -3.25841e-07, 3.25841e-07, -3.25841e-07, -1, -6.07385, 1.74878, 0 )

[node name="bridge_wingR" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00204, 1.74878, 0 )

[node name="open_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="open_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.869955, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="open_area" to="." method="_on_open_area_body_entered"]
[connection signal="body_exited" from="open_area" to="." method="_on_open_area_body_exited"]
